# jewelry_backend

./: .gitignore  AUDIT_READINESS.md  Dockerfile  README.md  alembic.ini  package-lock.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2406afe136c2_zakat_add_nisab_to_settings_and_zakat_.py  28b387f25187_audit_a1_hash_chain_columns_on_.py  64874dd3486c_initial_schema.py  a1b2c3d4e5f6_add_categories.py  a1b2c3d4e5f7_inventory_phase5_suppliers.py  (+24 more)
app/: config.py  deps.py  main.py  seed.py
docs/: AUDIT_CONTROLS.md
scripts/: smoke_phase1_to_3.py  smoke_phase4.py  smoke_phase5.py  smoke_phase6.py  smoke_phase7.py
tests/: conftest.py  test_accounting_api.py  test_ap_posting.py  test_ap_reports.py  test_ar_api.py  test_ar_core.py  test_ar_receipts.py  test_audit_chain.py  test_audit_chain_db.py  test_audit_chain_multi_write.py  test_auth_audit.py  test_bank_accounts.py  test_bank_reconcile.py  test_bank_transfer.py  test_buyback_pricing.py  test_calendar_filter_orders.py  test_checkout_stone.py  test_coa_lebanese.py  test_dashboard.py  test_daterange.py  test_expenses_bills.py  test_expenses_reports.py  test_exports.py  test_field_diff.py  test_fx.py  test_gl_hash.py  test_gl_posting.py  test_gl_postings_buyback_melt_adj.py  test_gl_postings_sale.py  test_gl_postings_stone.py  test_gl_postings_supplier.py  test_gl_postings_wiring.py  test_gl_refund_stone.py  test_gl_seed_opening.py  test_gl_supplier_stone.py  test_gl_trial_balance.py  test_gl_validate.py  test_gold_market.py  test_hard_delete.py  test_inventory_reconcile_units.py  (+23 more)
(+85 files in other folders)
